更新Aikar's Flags文档，包括新的JVM启动标志和内存分配建议
此次更新提供了更详细的JVM启动标志设置说明，以及针对不同内存大小的服务器的推荐配置。此外，还增加了关于Java GC日志记录的说明，帮助管理员诊断和优化垃圾回收性能。文档中还强调了不要在共享主机上分配所有可用内存的重要性，以避免服务器性能问题。

文档的其他部分也进行了技术性解释和澄清，例如解释了为什么`Xms`应该匹配`Xmx`，以及`G1HeapRegionSize`等标志的调整依据。这些更改旨在使文档更加全面和易于理解，帮助服务器管理员更好地优化他们的Java虚拟机设置。

通过这次更新，我们希望服务器管理员能够根据最新的建议和最佳实践来配置他们的Minecraft服务器，从而提高服务器的稳定性和性能。